--- a/PRACTICE.html
+++ b/PRACTICE.html
@@ -60,7 +60,7 @@
     Ab alag aasmaan hai
     Aur hai zameen bhi kuch alag si
     Par miloge jab kabhi toh dekhna tabhi
-    Main kuch alag nahi
+    Main kuch alag nahi.
 </pre>
 
     </body>
